--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -12,5 +12,5 @@ jobs:
       - run:
           name: Which bundler?
           command: bundle -v
-          comman: gem install bundler:2.1.4
+          command: gem install bundler:2.1.4
       - ruby/bundle-install
